Refactorizacion de enumeraciones
